[package]
name = "bacc-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
bacc = { package = "bacc-rs", version = "0.2.0" }
tower-http = { version = "0.6", features = ["cors"] }
num-bigint = "0.4.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
