[package]
name = "bacc-server"
version = "0.1.0"
edition = "2024"
license = "LGPL-3.0-only"

[dependencies]
axum = "0.8"
bacc = { package = "bacc-rs", version = "0.3.0" }
bacc_core = { package = "bacc-core-rs", version = "0.2.1" }
shoe = { package = "shoe-rs", version = "0.2" }
rand = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
